# DarkPhoenix

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
darkphoenixAES/: AES.py  Attack.py  Encoding.py  Exception.py  ExtractEncoding.py  FaultPositionValidator.py  MeetITM.py  MultTable.py  Step1.py  Step2.py  Step3.py  Step3_sage.py  Step4.py  Step5.py  Utils.py  WhiteBoxedAES.py  WhiteBoxedAESProxy.py  __init__.py  __main__.py
darkphoenixAES/test/: AESEncoded.py  WhiteBoxedAESAutoTest.py  WhiteBoxedAESTest.py  test_AES.py  test_Attack.py  test_Encoding.py  test_WhiteBoxedAESProxy.py
